--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 01:05:02 2018</p>
+         Last Run: Fri Nov  2 02:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>1</td>
                         <td>-2</td>
                         <td>6</td>
-                        <td>80</td>
+                        <td>78</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
-                        <td>63</td>
+                        <td>60</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -46,11 +46,11 @@
                         <td>4</td>
                         <td>2</td>
                         <td>4</td>
-                        <td>66</td>
+                        <td>63</td>
                         <td>1</td>
-                        <td>8</td>
-                        <td>SW</td>
-                        <td>62</td>
+                        <td>10</td>
+                        <td>WSW</td>
+                        <td>60</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>7</td>
                         <td>5</td>
                         <td>3</td>
-                        <td>55</td>
+                        <td>54</td>
                         <td>1</td>
-                        <td>10</td>
-                        <td>SW</td>
-                        <td>64</td>
+                        <td>11</td>
+                        <td>WSW</td>
+                        <td>63</td>
                      </tr>
                   </tbody>
                </table>
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "80",
-                 "66",
-                 "55"
+                 "78",
+                 "63",
+                 "54"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "63",
-                 "62",
-                 "64"
+                 "60",
+                 "60",
+                 "63"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 01:05:02 2018</p>
+         Last Run: Fri Nov  2 02:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -248,12 +248,12 @@
                         <td>Overcast</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>17</td>
+                        <td>18</td>
                         <td>52</td>
                         <td>1</td>
                         <td>11</td>
-                        <td>WNW</td>
-                        <td>86</td>
+                        <td>NW</td>
+                        <td>87</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -265,15 +265,15 @@
                         <td>1</td>
                         <td>13</td>
                         <td>NW</td>
-                        <td>73</td>
+                        <td>74</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Chance of Rain</td>
-                        <td>8</td>
-                        <td>6</td>
-                        <td>34</td>
-                        <td>49</td>
+                        <td>9</td>
+                        <td>9</td>
+                        <td>36</td>
+                        <td>48</td>
                         <td>1</td>
                         <td>13</td>
                         <td>NW</td>
@@ -306,7 +306,7 @@
                "data":[
                  "6",
                  "6",
-                 "6"
+                 "9"
                ]
              },
              {
@@ -318,7 +318,7 @@
                "data":[
                  "8",
                  "8",
-                 "8"
+                 "9"
                ]
              }
            ]
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "17",
+                 "18",
                  "24",
-                 "34"
+                 "36"
                ]
              },
              {
@@ -388,7 +388,7 @@
                "data":[
                  "52",
                  "52",
-                 "49"
+                 "48"
                ]
              },
              {
@@ -397,8 +397,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "86",
-                 "73",
+                 "87",
+                 "74",
                  "68"
                ]
              }
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 01:05:02 2018</p>
+         Last Run: Fri Nov  2 02:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Nov 06, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -463,8 +463,8 @@
                         <td>Snow Showers</td>
                         <td>-4</td>
                         <td>-7</td>
-                        <td>41</td>
-                        <td>76</td>
+                        <td>40</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NNW</td>
@@ -475,8 +475,8 @@
                         <td>Snow Showers</td>
                         <td>-4</td>
                         <td>-7</td>
-                        <td>40</td>
-                        <td>76</td>
+                        <td>38</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NNW</td>
@@ -485,14 +485,14 @@
                      <tr>
                         <td>11:00 PM</td>
                         <td>Snow Showers</td>
-                        <td>-4</td>
-                        <td>-7</td>
-                        <td>38</td>
-                        <td>78</td>
+                        <td>-5</td>
+                        <td>-9</td>
+                        <td>32</td>
+                        <td>83</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NNW</td>
-                        <td>92</td>
+                        <td>91</td>
                      </tr>
                   </tbody>
                </table>
@@ -521,7 +521,7 @@
                "data":[
                  "-7",
                  "-7",
-                 "-7"
+                 "-9"
                ]
              },
              {
@@ -533,7 +533,7 @@
                "data":[
                  "-4",
                  "-4",
-                 "-4"
+                 "-5"
                ]
              }
            ]
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "41",
                  "40",
-                 "38"
+                 "38",
+                 "32"
                ]
              },
              {
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "76",
-                 "76",
-                 "78"
+                 "81",
+                 "82",
+                 "83"
                ]
              },
              {
@@ -614,7 +614,7 @@
                "data":[
                  "91",
                  "92",
-                 "92"
+                 "91"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 01:05:02 2018</p>
+         Last Run: Fri Nov  2 02:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -677,13 +677,13 @@
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-7</td>
-                        <td>-11</td>
+                        <td>-10</td>
                         <td>24</td>
-                        <td>72</td>
+                        <td>75</td>
                         <td>0</td>
-                        <td>8</td>
-                        <td>NNE</td>
-                        <td>46</td>
+                        <td>6</td>
+                        <td>NE</td>
+                        <td>47</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -691,23 +691,23 @@
                         <td>-7</td>
                         <td>-10</td>
                         <td>24</td>
-                        <td>74</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>6</td>
                         <td>NE</td>
-                        <td>48</td>
+                        <td>49</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-7</td>
-                        <td>-10</td>
+                        <td>-8</td>
+                        <td>-11</td>
                         <td>24</td>
-                        <td>75</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>6</td>
                         <td>NE</td>
-                        <td>48</td>
+                        <td>49</td>
                      </tr>
                   </tbody>
                </table>
@@ -734,9 +734,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-11",
                  "-10",
-                 "-10"
+                 "-10",
+                 "-11"
                ]
              },
              {
@@ -748,7 +748,7 @@
                "data":[
                  "-7",
                  "-7",
-                 "-7"
+                 "-8"
                ]
              }
            ]
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "72",
-                 "74",
-                 "75"
+                 "75",
+                 "76",
+                 "76"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "46",
-                 "48",
-                 "48"
+                 "47",
+                 "49",
+                 "49"
                ]
              }
            ]
