--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 02:05:02 2018</p>
+         Last Run: Fri Nov  2 03:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -31,38 +31,38 @@
                      <tr>
                         <td>10:00 AM</td>
                         <td>Mostly Cloudy</td>
-                        <td>1</td>
-                        <td>-2</td>
+                        <td>0</td>
+                        <td>-3</td>
                         <td>6</td>
-                        <td>78</td>
+                        <td>83</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
-                        <td>60</td>
+                        <td>64</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>4</td>
                         <td>2</td>
                         <td>4</td>
-                        <td>63</td>
+                        <td>68</td>
                         <td>1</td>
                         <td>10</td>
-                        <td>WSW</td>
-                        <td>60</td>
+                        <td>SW</td>
+                        <td>59</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>7</td>
-                        <td>5</td>
+                        <td>Partly Cloudy</td>
+                        <td>6</td>
+                        <td>4</td>
                         <td>3</td>
-                        <td>54</td>
+                        <td>56</td>
                         <td>1</td>
-                        <td>11</td>
-                        <td>WSW</td>
-                        <td>63</td>
+                        <td>10</td>
+                        <td>SW</td>
+                        <td>59</td>
                      </tr>
                   </tbody>
                </table>
@@ -89,9 +89,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-2",
+                 "-3",
                  "2",
-                 "5"
+                 "4"
                ]
              },
              {
@@ -101,9 +101,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "1",
+                 "0",
                  "4",
-                 "7"
+                 "6"
                ]
              }
            ]
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "78",
-                 "63",
-                 "54"
+                 "83",
+                 "68",
+                 "56"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "60",
-                 "60",
-                 "63"
+                 "64",
+                 "59",
+                 "59"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 02:05:02 2018</p>
+         Last Run: Fri Nov  2 03:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -248,8 +248,8 @@
                         <td>Overcast</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>18</td>
-                        <td>52</td>
+                        <td>16</td>
+                        <td>50</td>
                         <td>1</td>
                         <td>11</td>
                         <td>NW</td>
@@ -261,19 +261,19 @@
                         <td>8</td>
                         <td>6</td>
                         <td>24</td>
-                        <td>52</td>
+                        <td>51</td>
                         <td>1</td>
-                        <td>13</td>
-                        <td>NW</td>
+                        <td>14</td>
+                        <td>NNW</td>
                         <td>74</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Chance of Rain</td>
-                        <td>9</td>
-                        <td>9</td>
-                        <td>36</td>
-                        <td>48</td>
+                        <td>8</td>
+                        <td>6</td>
+                        <td>34</td>
+                        <td>49</td>
                         <td>1</td>
                         <td>13</td>
                         <td>NW</td>
@@ -306,7 +306,7 @@
                "data":[
                  "6",
                  "6",
-                 "9"
+                 "6"
                ]
              },
              {
@@ -318,7 +318,7 @@
                "data":[
                  "8",
                  "8",
-                 "9"
+                 "8"
                ]
              }
            ]
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "18",
+                 "16",
                  "24",
-                 "36"
+                 "34"
                ]
              },
              {
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "52",
-                 "52",
-                 "48"
+                 "50",
+                 "51",
+                 "49"
                ]
              },
              {
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 02:05:02 2018</p>
+         Last Run: Fri Nov  2 03:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Nov 06, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -464,19 +464,19 @@
                         <td>-4</td>
                         <td>-7</td>
                         <td>40</td>
-                        <td>81</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NNW</td>
-                        <td>91</td>
+                        <td>92</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Snow Showers</td>
                         <td>-4</td>
                         <td>-7</td>
-                        <td>38</td>
-                        <td>82</td>
+                        <td>39</td>
+                        <td>81</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NNW</td>
@@ -487,12 +487,12 @@
                         <td>Snow Showers</td>
                         <td>-5</td>
                         <td>-9</td>
-                        <td>32</td>
-                        <td>83</td>
+                        <td>30</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>8</td>
                         <td>NNW</td>
-                        <td>91</td>
+                        <td>92</td>
                      </tr>
                   </tbody>
                </table>
@@ -591,8 +591,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "40",
-                 "38",
-                 "32"
+                 "39",
+                 "30"
                ]
              },
              {
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "80",
                  "81",
-                 "82",
-                 "83"
+                 "82"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "91",
                  "92",
-                 "91"
+                 "92",
+                 "92"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Fri Nov  2 02:05:02 2018</p>
+         Last Run: Fri Nov  2 03:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -682,7 +682,7 @@
                         <td>75</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>NE</td>
+                        <td>ENE</td>
                         <td>47</td>
                      </tr>
                      <tr>
@@ -690,23 +690,23 @@
                         <td>Partly Cloudy</td>
                         <td>-7</td>
                         <td>-10</td>
-                        <td>24</td>
+                        <td>23</td>
                         <td>76</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>NE</td>
-                        <td>49</td>
+                        <td>ENE</td>
+                        <td>48</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-8</td>
-                        <td>-11</td>
+                        <td>-7</td>
+                        <td>-10</td>
                         <td>24</td>
                         <td>76</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>NE</td>
+                        <td>ENE</td>
                         <td>49</td>
                      </tr>
                   </tbody>
@@ -736,7 +736,7 @@
                "data":[
                  "-10",
                  "-10",
-                 "-11"
+                 "-10"
                ]
              },
              {
@@ -748,7 +748,7 @@
                "data":[
                  "-7",
                  "-7",
-                 "-8"
+                 "-7"
                ]
              }
            ]
@@ -806,7 +806,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "24",
-                 "24",
+                 "23",
                  "24"
                ]
              },
@@ -828,7 +828,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "47",
-                 "49",
+                 "48",
                  "49"
                ]
              }
